--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # User Custom - Not Git
+*.csv
 *.tmp
 *-tmp
 tmp-*
 *-tmp-*
 *.log
 /gitignore/
-
 
 # Ignore Microsoft Office temporary files
 ~$*.xls*
